@@ -45,12 +45,15 @@ DarkRP 2.3.7 SVN
 [FIX] Sleep and get unarrested bug
 [FIX] Being able to set name to world prop
 [FIX] Vehicle exploit where you can go through walls with pods
+[FIX] Weapon ironsight bugs
+[FIX] Sleep and get free ammo
 [CHANGE] Default shipments are now in addshipments.lua
 [CHANGE] Moved complicated code in shared.lua and addshipments.lua to MakeThings.lua
 [CHANGE] Changed filename of addshipments.lua to addentities.lua
 [CHANGE] People now can't use wanted as an ESP, you will only see someone is wanted if he is in your sight. This way it won't be abused to find players.
 [CHANGE] People now drop everything in pocket when they die.
 [CHANGE] Medic gun world model to package, so it doesn't look like he's about to blow you up
+[CHANGE] Moneybags now have their own seperate entity
 [REMOVE] Simple Prop protection. You have served us well, goodbye.
 [REMOVE] RunConsoleCommand override
 
